--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
 
     <title>Sunnyside</title>
@@ -20,7 +33,7 @@
       <div class="hero__index">
         <nav class="hero__nav">
           <div class="hero__sunnyside">
-            <h2 class="sunnyside">Sunnyside</h2>
+            <h2 class="sunnyside">sunnyside</h2>
           </div>
           <div class="hero__fournav">
             <h3 class="hero__fournavtext">About</h3>
@@ -44,15 +57,20 @@
         <div class="section__one">
           <h2 class="section__h2">Transform your brand</h2>
           <p class="sectionp">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
-            consequatur illum consectetur ea. Fugit iusto beatae exercitationem
-            reprehenderit inventore corporis necessitatibus, assumenda
-            asperiores consequuntur eveniet incidunt sint tenetur dignissimos
-            harum.
+            We are a full-service creative agency specializing in helping brands
+            grow faster .Engage your clients through compelling visuals that do
+            most of the marketing for you.
           </p>
-          <a class="sectionanchor">LEARN MORE</a>
+          <p class="section__anchor">LEARN MORE</p>
         </div>
         <div class="section__two">
+          <img
+            src="./images/desktop/image-transform.jpg"
+            alt=""
+            class="sectionimg"
+          />
+        </div>
+        <div class="section__four">
           <img
             src="./images/desktop/image-stand-out.jpg"
             alt=""
@@ -60,22 +78,15 @@
           />
         </div>
         <div class="section__three">
-          <h2 class="section__h2">Stand out to the right audience</h2>
-          <p class="sectionp">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
-            velit, dolorum ex voluptas ratione minima consequatur sit? Eum
-            soluta fugit velit ratione officia facilis, modi reiciendis
-            quisquam, beatae minima sunt!
+          <h2 class="section__h22">Stand out to the right audience</h2>
+          <p class="section__p2">
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers and copywriters, we'll build and extend
+            your brand in digital places.
           </p>
-          <a class="sectionanchor">LEARN MORE</a>
+          <p class="section__anchor">LEARN MORE</p>
         </div>
-        <div class="section__four">
-          <img
-            src="./images/desktop/image-transform.jpg"
-            alt=""
-            class="sectionimg"
-          />
-        </div>
+
         <div class="section__five">
           <img
             class="section__img2"
@@ -84,9 +95,9 @@
           />
           <h4 class="section__h4">Graphic design</h4>
           <p class="sectionp2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            autem dolorum temporibus aut vel dolor atque maxime vitae itaque
-            ullam rerum non ut, sequi nemo facilis. Corrupti ab nam similique?
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients'
+            attention
           </p>
         </div>
         <div class="section__six">
