--- a/index.html
+++ b/index.html
@@ -106,18 +106,17 @@
             src="./images/desktop/image-photography.jpg"
             alt=""
           />
-          <h4 class="section__h4">Photography</h4>
-          <p class="sectionp2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            autem dolorum temporibus aut vel dolor atque maxime vitae itaque
-            ullam rerum non ut, sequi nemo facilis. Corrupti ab nam similique?
+          <h4 class="section__h44">Photography</h4>
+          <p class="sectionp22">
+            Increases your credibility by getting the most stunning high-quality
+            photos that improve your businesss image
           </p>
         </div>
       </div>
+      <div class="testimonial__header">
+        <h2 class="testimonial__heading">CLIENT TESTIMONIAL</h2>
+      </div>
       <div class="testimonials">
-        <div class="testimonial__header">
-          <h2 class="testimonial__heading">CLIENT TESTIMONIAL</h2>
-        </div>
         <div class="first__testimonial">
           <img
             class="testimonial__person"
@@ -125,10 +124,8 @@
             alt=""
           />
           <p class="testimonial__testimonies">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel quas
-            qui nihil. Est voluptatem expedita porro quasi facilis,
-            exercitationem deleniti quas impedit, voluptate nihil officia dolor
-            quidem, consectetur natus modi.
+            We put our trust in Sunnyside and they delivered, making sure our
+            needs were met and deadlines were always hit.
           </p>
           <div class="testimonial__details">
             <h4 class="testimonial__name">Emily R.</h4>
@@ -142,31 +139,27 @@
             alt=""
           />
           <p class="testimonial__testimonies">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-            doloremque labore corporis maxime assumenda tenetur reprehenderit
-            quo. Nam, ipsa sapiente consectetur animi accusantium, natus ut
-            assumenda dolorem pariatur ab quos.
+            Suunyside's enthusiasm coupled with their keen interest in our
+            brand's success made it a satisfying and enjoyable experience.
           </p>
           <div class="testimonial__details">
             <h4 class="testimonial__name">Thomas S.</h4>
             <p class="testimonial__position">Chief Operating Officer</p>
           </div>
-          <div class="third__testimonial">
-            <img
-              class="testimonial__person"
-              src="./images/image-jennie.jpg"
-              alt=""
-            />
-            <p class="testimonial__testimonies">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-              minima facilis assumenda praesentium molestias voluptates
-              molestiae est possimus et laboriosam nam, quod tenetur deleniti
-              beatae culpa sequi aliquid. Asperiores, eius.
-            </p>
-            <div class="testimonial__details">
-              <h4 class="testimonial__name">Jennie F.</h4>
-              <p class="testimonial__position">Business Owner</p>
-            </div>
+        </div>
+        <div class="third__testimonial">
+          <img
+            class="testimonial__person"
+            src="./images/image-jennie.jpg"
+            alt=""
+          />
+          <p class="testimonial__testimonies">
+            Incredible end result! Our sales increased over 400% when we worked
+            with Sunnyside. Highly recommended!
+          </p>
+          <div class="testimonial__details">
+            <h4 class="testimonial__name">Jennie F.</h4>
+            <p class="testimonial__position">Business Owner</p>
           </div>
         </div>
       </div>
@@ -193,15 +186,15 @@
         />
       </div>
       <div class="footer">
-        <div>
-          <h4>sunnyside</h4>
+        <div class="footer__header">
+          <h4 class="footer__heading">sunnyside</h4>
         </div>
-        <div>
-          <h5>About</h5>
-          <h5>Services</h5>
-          <h5>Products</h5>
+        <div class="footer__list">
+          <h5 class="footer__lister">About</h5>
+          <h5 class="footer__lister">Services</h5>
+          <h5 class="footer__lister">Products</h5>
         </div>
-        <div>
+        <div class="footer__socials">
           <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M18.896 0H1.104C.494 0 0 .494 0 1.104v17.793C0 19.506.494 20 1.104 20h9.58v-7.745H8.076V9.237h2.606V7.01c0-2.583 1.578-3.99 3.883-3.99 1.104 0 2.052.082 2.329.119v2.7h-1.598c-1.254 0-1.496.597-1.496 1.47v1.928h2.989l-.39 3.018h-2.6V20h5.098c.608 0 1.102-.494 1.102-1.104V1.104C20 .494 19.506 0 18.896 0z"
